# svsup-fileupload-demo

./: .gitignore  Cargo.toml  error.html  fup-index.html  fup-session.html  index.html  style.css
articles/: Netpup - fast and modern websites.html  VAULT - A solution.html
src/: fileupload.rs  main.rs  water.rs
