[package]
name = "fileupload"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4.10.2"
futures = "0.3.31"
rand = "0.9.0"
futures-util = "0.3.31"
actix-files = "0.6.6"
zip = "2.5.0"
walkdir = "2.5.0"
tokio = "1.44.1"
actix-cors = "0.7.1"
chrono = "0.4.40"
lazy_static = "1.5.0"
